[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/TestTextures/ArrowTop.png" type="Texture" id=1]
[ext_resource path="res://Scenes/RythmGame.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ArrowLeft" type="Sprite" parent="."]
position = Vector2( 206.843, 268 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="ArrowRight" type="Sprite" parent="."]
position = Vector2( 306.843, 268 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="ArrowTop" type="Sprite" parent="."]
position = Vector2( 256.843, 268 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -5
